loadParty() Rework
loadParty() was reworked to prefer placing groups together as much as
possible. The code still needs to be cleaned to prepare for the GUI.